# Veil

./: .crxignore  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTORS.md  DEVELOPMENT.md  Gemfile  LICENSE  README.md  _config.yml  background.js  content.js  contributing.md  faq.md  how-it-works.md  index.html  index.md  install.md  install.ps1  install.sh  package-lock.json  package.json  playwright.config.js  popup.css  popup.html  popup.js  privacy.md  pyproject.toml  release-please-config.json  requirements.txt  styles.css  uninstall.ps1  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: FUNDING.yml  ci.yml  codeql.yml  dependabot.yml  fork-test-release.yml  release-please.yml  release.yml
_includes/: footer.html  nav.html
_layouts/: default.html
assets/css/: main.css
assets/js/: main.js
docs/: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  SECURITY.md  architecture.drawio
extension/: background.js  content.js  manifest.json  options.css  options.html  pattern_catalog.js  popup.css  popup.html  popup.js  styles.css
extension/icons/: icon-generator.html
scripts/: build_backend_bundle.py  build_crx.sh  build_model_bundle.py  gliner2_server.py  install_autostart_mac.sh  install_native_host_mac.sh  install_native_host_windows.bat  native_host.py  sync_version.py  uninstall_autostart_windows.bat  uninstall_native_host_windows.bat
scripts/installers/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
server/: gliner2_server.py  native_host.py
tests/e2e/: fixtures.js  (+3 more)
(+21 files in other folders)
