[project]
name = "veil-local-runtime"
version = "1.2.3"
description = "Local runtime and native-host support for the Veil browser extension."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "gliner2-onnx>=0.1.1,<0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<10",
]

[tool.uv]
package = false
